--- a/chat_client/public/index.html
+++ b/chat_client/public/index.html
@@ -10,7 +10,7 @@
     <iframe class="storeMsg" frameborder="10" style="width:100%; height: 100%;"></iframe>
     <textarea class="msgBox" cols="30" rows="10"></textarea>
     <button class="sendMsg">Send</button>
-    <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+    <script src="http://dylan.local:3000/socket.io/socket.io.js"></script>
     <script>
         var connectionOptions =  {
         "force new connection" : true,
@@ -19,21 +19,22 @@
         "transports" : ["websocket"]
     };
 
-    var socket = io('http://localhost:3000', connectionOptions);
+    var socket = io('http://dylan.local:3000', connectionOptions);
     const msgBox = document.querySelector("textarea.msgBox");
     const sendMsg = document.querySelector("button.sendMsg");
     const storeMsg = document.querySelector("iframe.storeMsg");
+    socket.emit("new user", "user");
     sendMsg.addEventListener("click", function () {
         const newMsg = storeMsg.contentWindow.document.createElement('p');
-        newMsg.textContent = msgBox.value;
+        newMsg.innerHTML = msgBox.value;
         storeMsg.contentWindow.document.body.appendChild(newMsg);
         socket.emit('new message', msgBox.value);
         msgBox.value = ``
     });
     socket.on('new message', (data) => {
-        console.log(data);
         const a = document.createElement('p');
-        a.textContent = data.message;
+        console.log(data);
+        a.innerHTML = data.message;
         storeMsg.contentWindow.document.body.appendChild(a);
     });
     </script>
