--- a/chat_client/public/index.html
+++ b/chat_client/public/index.html
@@ -23,12 +23,28 @@
     const msgBox = document.querySelector("textarea.msgBox");
     const sendMsg = document.querySelector("button.sendMsg");
     const storeMsg = document.querySelector("iframe.storeMsg");
-    socket.emit("new user", "user");
+    function getUsername () {
+        if (localStorage.hasOwnProperty('username')) {
+            return localStorage.getItem('username');
+        } else {
+            const user = prompt('Please enter a username');
+            localStorage.setItem('username', user);
+            return user;
+        };
+    };
+    function getUsername_2 () {
+        if (!localStorage.hasOwnProperty('username')) {
+            localStorage.setItem('username', prompt('Please enter a username'));
+        }
+        return localStorage.getItem('username');
+    }
+    socket.emit("new user", getUsername_2());
+    console.log(getUsername())
     sendMsg.addEventListener("click", function () {
         const newMsg = storeMsg.contentWindow.document.createElement('p');
-        newMsg.innerHTML = msgBox.value;
+        newMsg.innerHTML = `${getUsername()}: ${msgBox.value}`;
         storeMsg.contentWindow.document.body.appendChild(newMsg);
-        socket.emit('new message', `${msgBox.value}<br><br>`);
+        socket.emit('new message', `${getUsername()}: ${msgBox.value}<br><br>`);
         msgBox.value = ``
     });
     socket.on('new message', (data) => {
