--- a/chat_client/public/index.html
+++ b/chat_client/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <iframe class="storeMsg" frameborder="10" style="width:100%; height: 100%;"></iframe>
     <div>
-        <p>Please don't upload files that can't be rendered by a browser.</p>
+        <p>Upload image</p>
         <input type="file" onchange="encodeImageFileAsURL(this)" />
     </div>
     <br>
